# TerminalProject

./: .env.example  .gitignore  .railwayignore  01_PRODUCT_SPEC.md  02_SYSTEM_DESIGN.md  03_CLI_AND_TERMINAL.md  04_EXCHANGE_AND_NEWS.md  05_RISK_ENGINE.md  06_ROADMAP_AND_SPRINTS.md  Dockerfile  MOBILE_APP_AUDIT.md  NEWS_ENTITY_RESOLUTION_SPEC.md  ONBOARDING_DESIGN_STRATEGY.md  README.md  docker-compose.yml  fly.toml  page.html  parse_cmc.py  parse_csv.py  parse_html.py  parse_regex.py  parse_snippet.py  preview.html  preview.py  pyproject.toml  render.yaml  run.sh  run_web.sh  skills-lock.json
.github/workflows/: ci.yml
config/: aliases.json
config/assets/: commodity_assets.json  crypto_assets.json  equity_assets.json  impact_map.json  theme_map.json
docs/: VISA_SLOT_WATCHER.md
nginx/: nginx.conf
scripts/: tg_auth.py  visa_slot_watcher.py
src/cryptoterminal/: __main__.py  app.py
terraform/: compute.tf  cryptoterminal-key.pub  database.tf  ecr.tf  iam.tf  monitoring.tf  network.tf  outputs.tf  versions.tf
tests/: conftest.py  test_alert_validation.py  test_auth_tokens.py  test_event_bus.py  test_exchange_auth.py  test_hyperliquid_executor.py  test_market_adapter.py  test_models.py  test_news_entity_resolution.py  test_news_normalize.py  test_portfolio_manager.py  test_require_pro.py  test_risk_engine_balance_sync.py  test_risk_rules.py  test_spa_fallback.py  test_tradfi_support_matrix.py  test_websocket_manager.py
web/: .env.production  index.html  package-lock.json  package.json  vite.config.js
web-dist/: index.html  robots.txt  sw.js
web-dist/assets/: AccountSettings-umedh5aD.js  AdminPage-DLQHMqk7.js  AlertMonitoring-PlPzdt0i.js  BigTransfers-xKOuWDte.js  CryptoUpgradePage-DK0IcVxG.js  CustomAlerts-BRvqzEfg.js  DashboardPage-C1HjKLXH.js  ETFPage-sPxtmpA8.js  EconomicCalendar-C8jxKYJ2.js  ForgotPasswordPage-CwDPWDf8.js  FundingRate-CyVVmGGq.js  GlobalMetrics-D8Xa_IxR.js  LandingPage-CPJZOybz.js  LiquidationsHeat-74NW0Igm.js  LiquidationsStream-DuOWUxJc.js  LoginPage-DzAxZjRr.js  LongShortRatio-au7-CTMr.js  MarketsPage-C-Xpmblc.js  NotFoundPage-BNO53QIZ.js  PortfolioPage-IhpSUOUe.js  PrivacyPage-DQ71aXKZ.js  RegisterPage-BSRZNmjw.js  ResetPasswordPage-Cko8gBzT.js  SmartMoney-CZiUW0K8.js  StocksPage-C0bPi9Hw.js  SystemAlerts-f_acL57c.js  TerminalPage-g6Eqjs0G.js  TermsPage-C1_wt4fd.js  TokenUnlock-C3qMJzFU.js  VolumeMonitor-BBy1iIOU.js  WhaleWallsPage-BS6pAeSL.js  api-DlQxBu8A.js  index--8zNcQha.css  index-2J4bQPmL.js  index-2QActU5r.js  index-3dfRTqz9.js  (+338 more)
(+205 files in other folders)
