[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoterminal"
version = "0.1.0"
description = "Haber bazlı kripto trading terminali"
requires-python = ">=3.12"

dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
    "httpx[http2]>=0.27",
    "websockets>=12.0",
    "ccxt>=4.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "redis>=5.0",
    "slowapi>=0.1.9",
    "uvloop>=0.19",
    "uvicorn>=0.30",
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.0,<4.0",
    "python-jose[cryptography]>=3.3",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "telethon>=1.36",
    "ddgs>=0.1",
    "eth-account>=0.11",
    "hyperliquid-python-sdk>=0.10",
]

[project.optional-dependencies]
visa-watcher = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# Bilinen cüzdan adresi tablosunda birkaç adres birden fazla borsaya
# etiketlenmiş — veri temizliği ayrı bir işte ele alınacak, CI'ı bloklamasın.
"src/cryptoterminal/big_transfers/known_addresses.py" = ["F601"]
